# ur

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile.toml  PROMPT.md  README.md  THIRDPARTY_LICENSE.md  bacon.toml  clippy.toml  mise.toml
crates/acceptance/: CLAUDE.md  Cargo.toml
crates/acceptance/src/: lib.rs
crates/acceptance/tests/: e2e.rs
crates/acceptance/tests/fixtures/: host-only.sh
crates/builderd/: CLAUDE.md  Cargo.toml
crates/builderd/src/: container_handler.rs  handler.rs  logging.rs  main.rs  pool_handler.rs  registry.rs
crates/compose/: CLAUDE.md  Cargo.toml
crates/compose/src/: lib.rs  manager.rs  model.rs
crates/db_events/: CLAUDE.md  Cargo.toml
crates/db_events/src/: lib.rs
crates/hostd/: CLAUDE.md  Cargo.toml
crates/hostd/src/: handler.rs  logging.rs  main.rs
crates/local_repo/: CLAUDE.md  Cargo.toml
crates/local_repo/src/: backend.rs  lib.rs  trait.rs  types.rs
crates/rag/: CLAUDE.md  Cargo.toml
crates/rag/src/: chunking.rs  lib.rs  manager.rs  manifest.rs  model.rs
crates/remote_repo/: CLAUDE.md  Cargo.toml
crates/remote_repo/src/: backend.rs  lib.rs  trait.rs  types.rs
crates/server/: CLAUDE.md  Cargo.toml
crates/server/src/: auth.rs  backup.rs  builder_container_client.rs  builder_pool_client.rs  builderd_client.rs  config.rs  credential.rs  git_exec.rs  grpc.rs  grpc_gh.rs  grpc_git.rs  grpc_hostexec.rs  grpc_knowledge.rs  grpc_remote_repo.rs  grpc_server.rs  grpc_ticket.rs  hostd_client.rs  lib.rs  log_cleanup.rs  logging.rs  main.rs  network_manager.rs  pool.rs  process.rs  project_registry.rs  proxy.rs  rag.rs  registry.rs  run_opts_builder.rs  snapshot.rs  startup.rs  strategy.rs  stream.rs  ui_event_poller.rs  worker.rs  worker_label.rs  workerd_client.rs
crates/server/src/hostexec/: config.rs  lua_transform.rs  mod.rs  script_registry.rs  shim.rs
crates/server/src/ticket_export/: mod.rs
crates/server/src/ticket_import/: mod.rs
crates/server/src/workflow/: coordinator.rs  engine.rs  github_poller.rs  mod.rs  step_router.rs  ticket_client.rs
crates/server/tests/: grpc_test.rs  restart_reconciliation_test.rs  two_db_acceptance_test.rs  worker_auth_test.rs  workflow_integration_test.rs
crates/ticket_client/: CLAUDE.md  Cargo.toml
crates/ticket_client/src/: args.rs  execute.rs  format.rs  format_tests.rs  grpc_tests.rs  json_output.rs  lib.rs  schema.rs  status.rs
crates/ticket_db/: CLAUDE.md  Cargo.toml
crates/ticket_db/migrations/: 001_initial.sql
crates/ticket_db/src/: graph.rs  lib.rs  model.rs  ticket_repo.rs
crates/ur/: CLAUDE.md  Cargo.toml
crates/ur-osc8/: Cargo.toml
crates/ur-osc8/src/: inject.rs  lib.rs  main.rs
crates/ur-ping/: Cargo.toml
crates/ur-ping/src/: main.rs
crates/ur/src/: admin.rs  builder.rs  builderd.rs  compose.rs  connection.rs  credential.rs  db.rs  describe.rs  hostd.rs  init.rs  input.rs  lib.rs  lifecycle_log.rs  logging.rs  main.rs  output.rs  project.rs  proxy.rs  rag.rs  ticket.rs  tui.rs
crates/ur/src/flow/: args.rs  execute.rs  mod.rs
crates/ur/src/knowledge/: args.rs  execute.rs  (+2 more)
crates/ur_db/: CLAUDE.md  Cargo.toml  build.rs
crates/ur_db/migrations/: 001_initial.sql  002_agent_slot.sql  002_node_id.sql  003_slot_unique_node_id.sql  003_ticket_project.sql  003_worker_slot.sql  004_worker_slot.sql  005_remove_slot_type.sql  006_worker_container_agent_status.sql  007_lifecycle_workflow.sql  008_lifecycle_verifying_fixing.sql  008_worker_idle_redispatch.sql  009_workflow_intent.sql  010_knowledge.sql  010_workflow_stall_lifecycle.sql  011_workflow_comments.sql  012_simplify_ticket_types.sql  013_workflow_drop_unique_ticket.sql  014_workflow_conditions.sql  015_parent_id_index.sql  015_ui_events.sql  016_project_priority_index.sql  018_status_index.sql  019_ui_events_ancestor_propagation.sql  020_ticket_comments.sql  021_rename_feedback_creating.sql  022_rename_task_to_code.sql
crates/ur_db/src/: activity.rs  activity_tests.rs  agent_repo.rs  backup.rs  database.rs  dependency.rs  dependency_tests.rs  graph.rs  knowledge_repo.rs  lib.rs  model.rs  query.rs  schema.rs  snapshot.rs  tests.rs  ticket.rs  ticket_repo.rs  ticket_tests.rs  ui_event_repo.rs  worker_repo.rs  workflow_repo.rs
crates/ur_db_sql/: CLAUDE.md  Cargo.toml
crates/ur_db_sql/src/: database.rs  graph.rs  model.rs  snapshot.rs  ticket_repo.rs
crates/ur_db_test/: Cargo.toml
crates/ur_db_test/src/: lib.rs
crates/ur_rpc/: CLAUDE.md  Cargo.toml  build.rs
crates/ur_rpc/src/: agent_status.rs  builderd.rs  connection.rs  edge_relation.rs  error.rs  feedback_mode.rs  lib.rs  lifecycle.rs  retry.rs  stream.rs  ticket_meta.rs  workflow_condition.rs  workflow_event.rs
crates/urd/: CLAUDE.md  Cargo.toml
crates/urd/src/: bridge.rs  config.rs  credential.rs  git_exec.rs  grpc.rs  grpc_gh.rs  grpc_git.rs  grpc_server.rs  lib.rs  main.rs  pf.rs  process.rs  proxy.rs
crates/urd/tests/: bridge_test.rs  grpc_test.rs
crates/urui/: CLAUDE.md  Cargo.toml  build.rs
crates/urui/src/: app.rs  cmd.rs  cmd_runner.rs  context.rs  create_ticket.rs  data.rs  event.rs  input.rs  keymap.rs  lib.rs  logging.rs  main.rs  model.rs  msg.rs  navigation.rs  notifications.rs  overlay_update.rs  page.rs  screen.rs  terminal.rs  theme.rs  throttle.rs  update.rs  view.rs
crates/urui/themes/: THIRD-PARTY-LICENSES.md  themes.css
crates/workercmd/gh/: CLAUDE.md  Cargo.toml
crates/workercmd/git/: CLAUDE.md  Cargo.toml
crates/workercmd/tools/: CLAUDE.md  Cargo.toml
crates/workercmd/ur-ping/: CLAUDE.md  Cargo.toml
crates/workercmd/workerd/: CLAUDE.md  Cargo.toml
crates/workerd/: CLAUDE.md  Cargo.toml
crates/workerd/src/: grpc_service.rs  init_git_hooks.rs  init_skill_hooks.rs  init_skills.rs  logging.rs  main.rs
crates/workertools/: CLAUDE.md  Cargo.toml
crates/workertools/src/: agent.rs  main.rs  repo.rs  status.rs  workflow.rs
crates/workflow_db/: CLAUDE.md  Cargo.toml
crates/workflow_db/migrations/: 001_initial.sql
crates/workflow_db/src/: lib.rs  model.rs  ui_event_repo.rs  worker_repo.rs  workflow_repo.rs
tools/tk-verify/: Cargo.toml
tools/tk-verify/src/: main.rs
(+323 files in other folders)
