[workspace]
resolver = "2"
members = ["crates/*"]
default-members = [
    "crates/agent_tools",
    "crates/container",
    "crates/ur",
    "crates/ur_rpc",
    "crates/urd",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
prost = "0.13"
tarpc = { version = "0.37", features = ["serde-transport-bincode", "unix"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
serde = { version = "1", features = ["derive"] }
