[workspace]
resolver = "2"
members = [
    "crates/acceptance",
    "crates/container",
    "crates/hostd",
    "crates/ur",
    "crates/ur_config",
    "crates/ur_db",
    "crates/ur_rpc",
    "crates/server",
    "crates/workercmd/*",
]
default-members = [
    "crates/container",
    "crates/hostd",
    "crates/ur",
    "crates/ur_config",
    "crates/ur_rpc",
    "crates/server",
    "crates/workercmd/tools",
    "crates/workercmd/workerd",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.13"
tonic-build = "0.13"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "registry"] }
