[workspace]
resolver = "2"
members = [
    "crates/acceptance",
    "crates/container",
    "crates/builderd",
    "crates/rag",
    "crates/ticket_client",
    "crates/ur",
    "crates/ur_config",
    "crates/ur_db",
    "crates/ur_rpc",
    "crates/ur_utils",
    "crates/server",
    "crates/tmux",
    "crates/ur-ping",
    "crates/workerd",
    "crates/workertools",
    "tools/tk-import",
    "tools/tk-verify",
]
default-members = [
    "crates/container",
    "crates/builderd",
    "crates/ur",
    "crates/ur_config",
    "crates/ur_rpc",
    "crates/ur_utils",
    "crates/server",
    "crates/workerd",
    "crates/workertools",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.13"
tonic-build = "0.13"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
tracing = "0.1"
tracing-appender = "0.2"
thiserror = "2"
tonic-types = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
