[package]
name = "builderd"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
clap = { workspace = true, features = ["env"] }
container = { path = "../container" }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
ur_config = { path = "../ur_config" }
ur_rpc = { path = "../ur_rpc", features = ["stream"] }
ur_utils = { path = "../ur_utils" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
