[package]
name = "ur-hostd"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
clap = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
ur_config = { path = "../ur_config" }
ur_rpc = { path = "../ur_rpc", features = ["core", "hostd", "stream"] }
