[package]
name = "remote_repo"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
ur_rpc = { path = "../ur_rpc", features = ["stream"] }

[lints]
workspace = true
