[package]
name = "ur-server"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
container = { path = "../container" }
clap = { workspace = true }
prost = { workspace = true }
rand = "0.9"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ur_config = { path = "../ur_config" }
mlua = { workspace = true }
serde = { workspace = true }
toml = "0.8"
ur_rpc = { path = "../ur_rpc", features = ["stream"] }

[features]
default = ["core", "hostexec", "hostd"]
core = ["ur_rpc/core"]
hostexec = ["ur_rpc/hostexec", "hostd"]
hostd = ["ur_rpc/hostd"]
temporal = ["ur_rpc/temporal"]

[dev-dependencies]
futures = "0.3"
tempfile = "3"
ur_rpc = { path = "../ur_rpc", features = ["core", "hostexec", "hostd"] }
