[package]
name = "ur-server"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
chrono = "0.4"
container = { path = "../container" }
fastembed = { version = "4", default-features = false, features = ["ort-load-dynamic", "hf-hub"] }
qdrant-client = "1"
clap = { workspace = true }
prost = { workspace = true }
rand = "0.9"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
ur_config = { path = "../ur_config" }
ur_db = { path = "../ur_db" }
mlua = { workspace = true }
serde = { workspace = true }
toml = "0.8"
rag = { path = "../rag" }
ur_rpc = { path = "../ur_rpc", features = ["stream"] }
ur_utils = { path = "../ur_utils" }

[features]
default = ["core", "hostexec", "builder", "rag", "ticket"]
core = ["ur_rpc/core"]
hostexec = ["ur_rpc/hostexec", "builder"]
builder = ["ur_rpc/builder"]
rag = ["ur_rpc/rag"]
ticket = ["ur_rpc/ticket"]
temporal = ["ur_rpc/temporal"]

[dev-dependencies]
futures = "0.3"
tempfile = "3"
ur_rpc = { path = "../ur_rpc", features = ["core", "hostexec", "builder", "ticket"] }
