[package]
name = "ur-server"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
chrono = "0.4"
container = { path = "../container" }
futures = "0.3"
clap = { workspace = true }
prost = { workspace = true }
rand = "0.9"
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
local_repo = { path = "../local_repo" }
ur_config = { path = "../ur_config" }
ticket_db = { path = "../ticket_db" }
ur_db = { path = "../ur_db" }
mlua = { workspace = true }
serde = { workspace = true }
toml = "0.8"
remote_repo = { path = "../remote_repo" }
ur_rpc = { path = "../ur_rpc", features = ["stream", "error", "retry"] }
ur_utils = { path = "../ur_utils" }
serde_json.workspace = true
sqlx = { git = "https://github.com/cmaher/sqlx", branch = "main", features = ["runtime-tokio", "postgres"] }

[features]
temporal = ["ur_rpc/temporal"]

[dev-dependencies]
container = { path = "../container" }
futures = "0.3"
local_repo = { path = "../local_repo" }
tempfile = "3"
ur_db_test = { path = "../ur_db_test" }
ur_rpc = { path = "../ur_rpc", features = ["stream", "error"] }

[lints]
workspace = true
