[package]
name = "ticket_db"
edition.workspace = true
version.workspace = true

[dependencies]
sqlx = { git = "https://github.com/cmaher/sqlx", branch = "main", features = ["runtime-tokio", "postgres"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
