[package]
name = "ur"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
clap = { workspace = true }
container = { path = "../container" }
dirs = "6"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
ur_config = { path = "../ur_config" }
ur_rpc = { path = "../ur_rpc", features = ["core"] }

[dev-dependencies]
tempfile = "3"
