[package]
name = "ur"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { workspace = true }
container = { path = "../container" }
dirs = "6"
glob = "0.3"
toml = "0.8"
toml_edit = "0.22"
fs4 = "0.12"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
ur_config = { path = "../ur_config" }
ur_db = { path = "../ur_db" }
ur_rpc = { path = "../ur_rpc", features = ["core", "rag", "ticket"] }

[dev-dependencies]
tempfile = "3"
