[package]
name = "ur"
edition.workspace = true
version.workspace = true

[[bin]]
name = "ur"
path = "src/main.rs"

[lib]
name = "ur"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
compose = { path = "../compose" }
container = { path = "../container" }
dirs = "6"
glob = "0.3"
plugins = { path = "../plugins" }
toml = "0.8"
toml_edit = "0.22"
fs4 = "0.12"
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = "1"
http-body = "1"
tmux = { path = "../tmux" }
ur_config = { path = "../ur_config" }
ur_db = { path = "../ur_db" }
ur_rpc = { path = "../ur_rpc", features = ["error", "retry"] }

[dev-dependencies]
tempfile = "3"
tokio-stream = { workspace = true }

[lints]
workspace = true
