[package]
name = "ur_db"
edition = "2024"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ur_common = { path = "../ur_common" }
petgraph = "0.7"
sqlx = { git = "https://github.com/cmaher/sqlx", branch = "main", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
