[package]
name = "ur_db"
edition = "2024"
version = "0.1.0"

[dependencies]
petgraph = "0.7"
rand = "0.8"
sqlx = { git = "https://github.com/cmaher/sqlx", branch = "main", features = ["runtime-tokio", "postgres"] }
ticket_db = { path = "../ticket_db" }
tokio = { version = "1", features = ["fs", "process"] }
workflow_db = { path = "../workflow_db" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
ur_db_test = { path = "../ur_db_test" }

[lints]
workspace = true
