[package]
name = "ur_db_test"
edition.workspace = true
version.workspace = true

[dependencies]
sqlx = { git = "https://github.com/cmaher/sqlx", branch = "main", features = ["runtime-tokio", "postgres"] }
ticket_db = { path = "../ticket_db" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
workflow_db = { path = "../workflow_db" }

[lints]
workspace = true
