[package]
name = "ur_rpc"
edition.workspace = true
version.workspace = true

[dependencies]
prost = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = ["core"]
core = []
hostexec = []
hostd = []
rag = []
ticket = []
stream = ["dep:tokio", "dep:tracing"]
temporal = []

[build-dependencies]
tonic-build = { workspace = true }
