[package]
name = "ur_rpc"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1", optional = true }
prost = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["core"]
core = []
hostexec = []
builder = []
rag = []
ticket = []
workerd = []
remote_repo = []
stream = ["dep:tokio", "dep:tracing"]
error = ["dep:tonic-types", "dep:anyhow"]
temporal = []

[build-dependencies]
tonic-build = { workspace = true }
