[package]
name = "ur_rpc"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1", optional = true }
prost = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true, optional = true }
tower = { workspace = true, optional = true, features = ["retry"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tower = { workspace = true, features = ["retry"] }

[features]
stream = ["dep:tokio", "dep:tracing"]
error = ["dep:tonic-types", "dep:anyhow"]
retry = ["dep:tower", "dep:tokio", "dep:tracing"]
temporal = []

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
