[package]
name = "urd"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
container = { path = "../container" }
clap = { workspace = true }
dirs = "6"
futures = "0.3"
serde = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
ur_rpc = { path = "../ur_rpc" }

[dev-dependencies]
tempfile = "3"
