[package]
name = "urd"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
container = { path = "../container" }
clap = { workspace = true }
dirs = "6"
prost = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = "0.8"
tonic = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
ur_rpc = { path = "../ur_rpc" }

[features]
default = ["core", "git"]
core = ["ur_rpc/core"]
git = ["ur_rpc/git"]
temporal = ["ur_rpc/temporal"]

[dev-dependencies]
futures = "0.3"
hyper-util = "0.1"
tempfile = "3"
tower = { workspace = true }
ur_rpc = { path = "../ur_rpc", features = ["core", "git"] }
