[package]
name = "urd"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
container = { path = "../container" }
clap = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
ur_config = { path = "../ur_config" }
ur_rpc = { path = "../ur_rpc" }

[features]
default = ["core", "git"]
core = ["ur_rpc/core"]
git = ["ur_rpc/git"]
temporal = ["ur_rpc/temporal"]

[dev-dependencies]
futures = "0.3"
tempfile = "3"
ur_rpc = { path = "../ur_rpc", features = ["core", "git"] }
