[package]
name = "urui"
edition.workspace = true
version.workspace = true

[lib]
name = "urui"
path = "src/lib.rs"

[[bin]]
name = "urui"
path = "src/main.rs"

[dependencies]
plugins = { path = "../plugins" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml_edit = "0.22"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
ur_config = { path = "../ur_config" }
ur_markdown = { path = "../ur_markdown" }
ur_rpc = { path = "../ur_rpc", features = ["retry"] }

[lints]
workspace = true
