[package]
name = "workerd"
edition.workspace = true
version.workspace = true

[[bin]]
name = "workerd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ur_config = { path = "../ur_config" }
ur_rpc = { path = "../ur_rpc", features = ["core", "hostexec", "workerd"] }

[dev-dependencies]
tempfile = "3"
