[package]
name = "workertools"
edition.workspace = true
version.workspace = true

[[bin]]
name = "workertools"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
ur_config = { path = "../ur_config" }
ur_rpc = { path = "../ur_rpc", features = ["core", "hostexec", "rag"] }
