[package]
name = "workercmd-gh"
edition.workspace = true
version.workspace = true

[[bin]]
name = "gh"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tokio = { workspace = true }
tonic = { workspace = true }
ur_config = { path = "../../ur_config" }
ur_rpc = { path = "../../ur_rpc", features = ["core", "gh"] }
