[package]
name = "workercmd-tools"
edition.workspace = true
version.workspace = true

[[bin]]
name = "ur-tools"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "registry"] }
ur_config = { path = "../../ur_config" }
ur_rpc = { path = "../../ur_rpc", features = ["core", "hostexec"] }
