[package]
name = "ur-workerd"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
ur_config = { path = "../../ur_config" }
ur_rpc = { path = "../../ur_rpc", features = ["core", "hostexec"] }
