[package]
name = "ur-workerd"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ur_config = { path = "../../ur_config" }
ur_rpc = { path = "../../ur_rpc", features = ["core", "hostexec"] }
